2011-09-27  Kentaro Hara  <haraken@chromium.com>

        Implement a PageTransitionEvent constructor for V8
        https://bugs.webkit.org/show_bug.cgi?id=68067

        Reviewed by Adam Barth.

        Enabled page-transition-event-constructor.html, since now V8 has a PageTransitionEvent constructor.

        * platform/chromium/test_expectations.txt:

2011-09-27  Kentaro Hara  <haraken@chromium.org>

        Implement a MessageEvent constructor for JSC
        https://bugs.webkit.org/show_bug.cgi?id=68883

        Reviewed by Adam Barth.

        message-event-constructor.html checks the behavior of the MessageEvent constructor.

        * fast/dom/constructed-objects-prototypes-expected.txt: Now window has MessageEvent.
        * fast/events/constructors/message-event-constructor-expected.txt: Added.
        * fast/events/constructors/message-event-constructor.html: Added.
        * platform/chromium/test_expectations.txt: Skipped message-event-constructor.html, since V8 does not yet have the MessageEvent constructor.

2011-09-27  Eric Uhrhane  <ericu@chromium.org>

        [Chromium/FileWriter] race condition in FileWriter completion can lead to assert
        https://bugs.webkit.org/show_bug.cgi?id=67684

        Reviewed by David Levin.

        * fast/filesystem/file-writer-abort-continue-expected.txt: Added.
        * fast/filesystem/file-writer-abort-continue.html: Added.
        * fast/filesystem/file-writer-abort-expected.txt: Added.
        * fast/filesystem/file-writer-abort.html: Added.
        * fast/filesystem/resources/file-writer-abort-continue.js: Added.
        * fast/filesystem/resources/file-writer-abort.js: Added.
        * fast/filesystem/resources/file-writer-events.js: Fixed a copy-paste error.

2011-09-27  Tim Horton  <timothy_horton@apple.com>

        svg/custom/oversized-pattern-scale.svg is useless because the interesting part of the test is off the screen
        https://bugs.webkit.org/show_bug.cgi?id=68945
