@@ -1,0 +1,9 @@
+Tests that WaveShaperNode applies proper non-linear distortion.
+
+On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE".
+
+PASS WaveShaperNode properly applied non-linear distortion.
+PASS successfullyParsed is true
+
+TEST COMPLETE
+
