@@ -1,3 +1,13 @@
+2011-09-27  Chris Rogers  <crogers@google.com>
+
+        Add layout test for WaveShaperNode
+        https://bugs.webkit.org/show_bug.cgi?id=68925
+
+        Reviewed by Kenneth Russell.
+
+        * webaudio/waveshaper-expected.txt: Added.
+        * webaudio/waveshaper.html: Added.
+
 2011-09-27  Kentaro Hara  <haraken@chromium.com>
 
         Implement a PageTransitionEvent constructor for V8
